# solana-substreams-sink-kafka

./: .gitignore  README.md  go.mod  go.sum  sink.go  sink_test.go
cmd/substreams-sink-kafka/: logging.go  main.go  sink.go
examples/simple/: Cargo.toml  simple-v0.1.0.spkg  substreams.yaml
examples/simple/src/: lib.rs
examples/simple/src/pb/: mod.rs  pubsub.v1.rs  sf.substreams.sink.pubsub.v1.rs
pb/sf/substreams/sink/kafka/v1/: kafka.pb.go
proto/: buf.gen.yaml
proto/sf/substreams/sink/kafka/v1/: kafka.proto
