[package]
name = "simple"
version = "0.0.1"
edition = "2021"

[lib]
name = "substreams"
crate-type = ["cdylib"]

[dependencies]
prost = "0.13"
prost-types = "0.13"
substreams = "0.6"

# Required so that ethabi > ethereum-types build correctly under wasm32-unknown-unknown
[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.2", features = ["custom"] }

[build-dependencies]
anyhow = "1"
regex = "1.8"

[profile.release]
lto = true
opt-level = 's'
strip = "debuginfo"
